<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pj="http://schemas.android.com/apk/res/com.net56888.logistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dip"
                android:layout_marginTop="12dp"
                android:text="@string/start_area"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <fragment
                android:id="@+id/fragment_start_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                class="com.net56888.logistics.LocationSelector"
                pj:button_count="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/stop_area"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <fragment
                android:id="@+id/fragment_stop_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                class="com.net56888.logistics.LocationSelector"
                pj:button_count="3" />

            <TextView
                android:id="@+id/pub_truck_plate_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/pub_truck_plate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/pub_truck_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:ems="10" >
            </EditText>

            <TextView
                android:id="@+id/pub_cargo_type_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/pub_cargo_type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/pub_cargo_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:entries="@array/pub_cargo_typelist" />

            <TextView
                android:id="@+id/pub_cargo_weight_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/pub_cargo_weight"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/pub_cargo_weight_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/pub_cargo_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" >
                </EditText>

                <Spinner
                    android:id="@+id/pub_cargo_weight_unit_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/pub_cargo_weight_unit_list" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/pub_truck_type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/pub_truck_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:entries="@array/pub_truck_typelist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/pub_truck_length"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/pub_truck_length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" >
                </EditText>

                <TextView
                    android:id="@+id/pub_truck_length_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/pub_truck_length_unit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/pub_truck_capacity_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/pub_truck_capacity"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/pub_truck_capacity_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/pub_truck_capacity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" >
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/pub_truck_capacity_unit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/pub_memo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/pub_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:ems="10" >
            </EditText>

            <Button
                android:id="@+id/pub_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/pub_submit_btn" />

            <Button
                android:id="@+id/pub_reset_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/pub_reset_btn" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>