<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pj="http://schemas.android.com/apk/res/com.net56888.logistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 会员类型 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_usertype"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/register_usertype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:entries="@array/register_usertypelist" />
            <!-- 会员名 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_username"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:ems="10"
                android:inputType="number" >
            </EditText>
            <!-- 密码 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:ems="10"
                android:inputType="textPassword" >
            </EditText>
            <!-- 真实姓名 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_name1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:ems="10" >
            </EditText>
            <!-- 身份证号码 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_postcard"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_postcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:ems="10" >
            </EditText>

            <!-- 性别 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_sex"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/register_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:entries="@array/register_sexlist" />
            <!-- 所属省份 所属地区 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dip"
                android:layout_marginTop="12dp"
                android:text="@string/register_province_city"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <fragment
                android:id="@+id/fragment_province_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                class="com.net56888.logistics.LocationSelector"
                pj:button_count="2" />

            <!-- 联系电话 -->
            <!--
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_tel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:ems="10" >
            </EditText>
            -->
            <!-- 手机号 -->
            <!--
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_sj"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/register_sj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:ems="10" >
            </EditText>
            -->


            <!-- 车型 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_cartype"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/register_cartype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:entries="@array/register_cartypelist" />
            <!-- 车牌 -->
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_carnums"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:orientation="horizontal" >

                
	            <Spinner
	                android:id="@+id/register_carnums_p"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="6dip"
	                android:entries="@array/register_carnums_plist" />
	            
	            <Spinner
	                android:id="@+id/register_carnums_a"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="6dip"
	                android:entries="@array/register_carnums_alist" />

	            <EditText
	                android:id="@+id/register_carnums_n"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_margin="6dip"
	                android:ems="10" >
	            </EditText>
	            
            </LinearLayout>

            <!-- 运输线路 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_roads"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/register_roads_start"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />

                <fragment
                    android:id="@+id/fragment_roads_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dip"
                    class="com.net56888.logistics.LocationSelector"
                    pj:button_count="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/register_roads_stop"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />

                <fragment
                    android:id="@+id/fragment_roads_stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dip"
                    class="com.net56888.logistics.LocationSelector"
                    pj:button_count="3" />
            </LinearLayout>

            <Button
                android:id="@+id/register_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_submit_btn" />

            <Button
                android:id="@+id/register_reset_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dip"
                android:text="@string/register_reset_btn" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>